--- a/ShamsiDatePickerSample/ShamsiDatePickerSample/ShamsiDatePickerSample.csproj
+++ b/ShamsiDatePickerSample/ShamsiDatePickerSample/ShamsiDatePickerSample.csproj
@@ -11,7 +11,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="4.5.0.495" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
+    <PackageReference Include="ShamsiDatePicker" Version="1.6.138" />
+    <PackageReference Include="Xamarin.Forms" Version="4.8.0.1821" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.6.0" />
   </ItemGroup>
 </Project>
