--- a/ShamsiDatePicker/ShamsiDatePicker.csproj
+++ b/ShamsiDatePicker/ShamsiDatePicker.csproj
@@ -1,31 +1,28 @@
 ﻿<Project Sdk="MSBuild.Sdk.Extras/2.1.2">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;MonoAndroid90</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;MonoAndroid10.0</TargetFrameworks>
     <ProduceReferenceAssembly>true</ProduceReferenceAssembly>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>1.6.152</Version>
+    <Version>1.6.181</Version>
     <Authors>Hossein Mahabadi</Authors>
-    <Description>This custom control shows shamsi calendar just like Xamarin forms DatePicker control.
+    <Description>
+      This custom control shows shamsi calendar just like Xamarin forms DatePicker control.
 
-Add below line to MainActivity.cs after instalation.
-Rg.Plugins.Popup.Popup.Init(this);
-
-https://instagram.com/hossein.mahabadi468</Description>
+      https://instagram.com/hossein.mahabadi468
+    </Description>
     <PackageIcon>ShamsiDatePickerIcon.png</PackageIcon>
-    <Copyright>Copyright (c) 2020-2025 Hossein Mahabadi
-https://instagram.com/hossein.mahabadi468</Copyright>
+    <Copyright>
+      Copyright (c) 2020-2025 Hossein Mahabadi
+      https://instagram.com/hossein.mahabadi468
+    </Copyright>
     <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
     <PackageLicenseFile>license.txt</PackageLicenseFile>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-    <PackageReleaseNotes>Bugs fixed and some featurs added.
-
-============================================================
-
-Add below line to MainActivity.cs after instalation.
-
-Rg.Plugins.Popup.Popup.Init(this);
-</PackageReleaseNotes>
+    <PackageReleaseNotes>
+      1. Transparent background problem fixed.
+      2. No need to add any code to MainActivity.cs 
+    </PackageReleaseNotes>
     <PackageTags>xamarin xamarinforms date persian persiandate shamsi jalali hijrishamsi taghvim datetime iran</PackageTags>
     <PackageProjectUrl>https://github.com/HosseinMahabadi/ShamsiDatePicker</PackageProjectUrl>
     <RepositoryUrl>https://github.com/HosseinMahabadi/ShamsiDatePicker</RepositoryUrl>
@@ -73,22 +70,21 @@ Rg.Plugins.Popup.Popup.Init(this);
       <PackagePath>readme.txt</PackagePath>
     </Content>
   </ItemGroup>
-  
+
   <ItemGroup>
     <PackageReference Include="CarouselView.FormsPlugin" Version="6.0.0" />
-    <PackageReference Include="HMExtension.Xamarin" Version="1.0.6" />
-    <PackageReference Include="Rg.Plugins.Popup" Version="2.0.0.9" />
+    <PackageReference Include="HMExtension.Xamarin" Version="1.0.7" />
     <PackageReference Include="VG.XFShapeView" Version="1.0.5" />
     <PackageReference Include="Xamarin.Essentials" Version="1.6.0" />
-    <PackageReference Include="Xamarin.Forms" Version="4.8.0.1821" />
   </ItemGroup>
 
-  <ItemGroup Condition=" $(TargetFramework.StartsWith('MonoAndroid')) ">    
+  <ItemGroup Condition=" $(TargetFramework.StartsWith('MonoAndroid')) ">
     <Compile Include="Platform\Android\Renderers\*.cs" />
-    
+
     <!--<AndroidAsset Include="Platform\Android\Assets\bnazanin.ttf" Link="Assets\bnazanin.ttf" />
     <AndroidAsset Include="Platform\Android\Assets\bnazanin_bold.ttf" Link="Assets\bnazanin_bold.ttf" />-->
 
     <AndroidResource Include="Platform\Android\Resources\values\styles.xml" Link="Resources\values\styles.xml" />
+    <AndroidResource Include="Platform\Android\Resources\values\colors.xml" Link="Resources\values\colors.xml" />
   </ItemGroup>
 </Project>
