--- a/ShamsiDatePickerSample/ShamsiDatePickerSample/ShamsiDatePickerSample.csproj
+++ b/ShamsiDatePickerSample/ShamsiDatePickerSample/ShamsiDatePickerSample.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -11,8 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ShamsiDatePicker" Version="1.6.152" />
-    <PackageReference Include="Xamarin.Forms" Version="4.8.0.1821" />
+    <PackageReference Include="ShamsiDatePicker" Version="1.6.181" />
     <PackageReference Include="Xamarin.Essentials" Version="1.6.0" />
   </ItemGroup>
 </Project>
