--- a/ShamsiDatePickerSample/ShamsiDatePickerSample.iOS/ShamsiDatePickerSample.iOS.csproj
+++ b/ShamsiDatePickerSample/ShamsiDatePickerSample.iOS/ShamsiDatePickerSample.iOS.csproj
@@ -124,6 +124,9 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="ShamsiDatePicker">
+      <Version>2.1.91</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
