--- a/ShamsiDatePickerSample/ShamsiDatePickerSample.Android/ShamsiDatePickerSample.Android.csproj
+++ b/ShamsiDatePickerSample/ShamsiDatePickerSample.Android/ShamsiDatePickerSample.Android.csproj
@@ -54,6 +54,9 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="ShamsiDatePicker">
+      <Version>2.1.91</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.AndroidX.Browser">
       <Version>1.3.0.5</Version>
     </PackageReference>
@@ -61,7 +64,7 @@
       <Version>1.0.0.7</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.AndroidX.Lifecycle.LiveData">
-      <Version>2.3.0.1</Version>
+      <Version>2.3.1</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
     <PackageReference Include="Xamarin.Google.Android.Material">
