--- a/ShamsiDatePickerSample/ShamsiDatePickerSample/ShamsiDatePickerSample.csproj
+++ b/ShamsiDatePickerSample/ShamsiDatePickerSample/ShamsiDatePickerSample.csproj
@@ -11,7 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ShamsiDatePicker" Version="2.0.19-alpha" />
+    <PackageReference Include="ShamsiDatePicker" Version="2.1.91" />
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
   </ItemGroup>
 </Project>
