--- a/ShamsiDatePickerSample/ShamsiDatePickerSample.iOS/ShamsiDatePickerSample.iOS.csproj
+++ b/ShamsiDatePickerSample/ShamsiDatePickerSample.iOS/ShamsiDatePickerSample.iOS.csproj
@@ -125,9 +125,12 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="ShamsiDatePicker">
-      <Version>2.1.91</Version>
+      <Version>2.1.199</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
+    <PackageReference Include="Xamarin.Forms">
+      <Version>5.0.0.2083</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
