--- a/ShamsiDatePickerSample/ShamsiDatePickerSample/ShamsiDatePickerSample.csproj
+++ b/ShamsiDatePickerSample/ShamsiDatePickerSample/ShamsiDatePickerSample.csproj
@@ -11,7 +11,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ShamsiDatePicker" Version="2.1.91" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
+    <PackageReference Include="ShamsiDatePicker" Version="2.1.199" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2083" />
   </ItemGroup>
 </Project>
